fixed fridge icon alignment with other icons in navbar

--- a/smartmat/src/assets/style/navbar.css
+++ b/smartmat/src/assets/style/navbar.css
@@ -8,7 +8,7 @@ separate css version for phone, to make it fit nicely into the phone screen
         font-size: 50px;
         color: black;
         position: fixed;
-        top: 1200px;
+        top: 1190px;
         right: 20px;
         z-index: 9999; /* Make sure the icon is on top of other content */
         cursor: pointer;
@@ -23,6 +23,7 @@ separate css version for phone, to make it fit nicely into the phone screen
 
     nav img{
         width: 40px;
+        margin-top: 10px;
     }
     #navbar-frame{
         border: solid 60px #20A877FF;
